--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>pinyin</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <description>a opensource java library for converting chinese to pinyin</description>
+    <description>an open source java library for converting chinese to pinyin</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,7 +28,9 @@
             <version>1.2.17</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
+            <!-- enable using @NotNull and @Nullable of IntelliJ IDEA compiler -->
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
